--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sniped",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,7 +13,14 @@
     "expo-status-bar": "~1.6.0",
     "package.json": "^2.0.1",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "expo-camera": "~13.4.4",
+    "expo-router": "^2.0.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "expo-linking": "~5.0.2",
+    "expo-constants": "~14.4.2",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
