--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.12",
+    "expo-font": "~11.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "package.json": "^2.0.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "expo-camera": "~13.4.4",
-    "expo-router": "^2.0.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-linking": "~5.0.2",
-    "expo-constants": "~14.4.2",
-    "react-native-gesture-handler": "~2.12.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-dev-client": "~2.4.12"
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
