--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@supabase/supabase-js": "^2.38.4",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
     "package.json": "^2.0.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "expo-camera": "~13.4.4",
-    "expo-router": "^2.0.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "expo-linking": "~5.0.2",
-    "expo-constants": "~14.4.2",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-twilio-phone": "^1.10.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.6",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
