--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-picker/picker": "2.4.10",
     "@supabase/supabase-js": "^2.38.4",
     "base64-arraybuffer": "^1.0.2",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
