--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-twilio-phone": "^1.10.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-contacts": "~12.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
